sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:15: error: not found: value j
    j=mini(i)
    ^AlgSelectionSort:16: error: not found: value j
    swap(i,j)
           ^